[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = ""
authors = ["Ying Jun <wandy1208@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
